--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,11 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - RajeevlochanP
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - RajeevlochanP/NewTube
+  - RajeevlochanP/AnonymousVoting
+  - RajeevlochanP/Web3SSH
+  - RajeevlochanP/TDI-MSACO
+  - RajeevlochanP/Parallel-TDIMSACO
